[tool.poetry]
name = "kimchima"
version = "0.2.0"
description = ""
authors = ["Aisuko <urakiny@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Aisuko/kimchi"
repository = "https://github.com/Aisuko/kimchi"
keywords = ["packaging", "poetry"]

packages = [
    { include = "pkg" },
]

exclude = ["pkg/dump", "pkg/model", "pkg/tokenizer"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.2.2"
transformers = "4.39.2"
sentencepiece = "0.2.0"

[tool.poetry.group.dev.dependencies]
torch = "2.2.2"
transformers = "4.39.2"
sentencepiece = "0.2.0"


[[tool.poetry.source]]
name = "kimchima"
url = "https://pypi.org/project/kimchima/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
